<resources>
    <string name="app_name">Restaurant Picker</string>
    <string name="search_hint">search any food items</string>

    <!-- Confirm Order -->
    <string name="item_name">Item Name : </string>
    <string name="restaurant_name">Restaurant Name : </string>
    <string name="phone">Phone : </string>
    <string name="address">Address : </string>
    <string name="amount">Amount : </string>

    <!-- Order History-->
    <string name="price">Price : </string>
    <string name="order_time">Order Time : </string>

    <string-array name="order_amount">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

</resources>
